--- a/naiserator.yaml
+++ b/naiserator.yaml
@@ -6,7 +6,7 @@ metadata:
   labels:
     team: {{team}}
 spec:
-  image: repo.adeo.no:5443/fpinfo-historikk:{{version}}
+  image: https://cloud.docker.com/u/navikt/repository/docker/navikt/fpinfo-historikk:{{version}}
   port: 8080
   replicas:
       min: 2
