--- a/naiserator.yaml
+++ b/naiserator.yaml
@@ -6,7 +6,7 @@ metadata:
   labels:
     team: {{team}}
 spec:
-  image: https://cloud.docker.com/u/navikt/repository/docker/{{version}}
+  image: navikt/fpinfo-historikk
   port: 8080
   replicas:
       min: 2
