--- a/naiserator.yaml
+++ b/naiserator.yaml
@@ -6,7 +6,7 @@ metadata:
   labels:
     team: {{team}}
 spec:
-  image: navikt/fpinfo-historikk
+  image: {{version}}
   port: 8080
   replicas:
       min: 2
