--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -6,7 +6,7 @@ jobs:
    build:
      working_directory: ~/fpinfo-historikk 
      docker:
-       - image: circleci/openjdk:8u171-jdk
+       - image: circleci/openjdk:11-jdk
      steps:
        - checkout       
        - restore_cache: 
