--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -11,13 +11,20 @@ jobs:
        - checkout       
        - restore_cache: 
           key: fpinfo-historikk-{{ checksum "pom.xml" }}
-      
        - run: mvn dependency:go-offline
-      
        - save_cache:
           paths:
             - ~/.m2
           key: fpinfo-historikk-{{ checksum "pom.xml" }}
+       - run:
+          name: "Setting version"
+          command: |
+            TIME=$(TZ="Europe/Oslo" date +%Y.%m.%d-%H.%M)
+            COMMIT=$(git rev-parse --short=12 HEAD)
+            VERSION="1.$TIME-$COMMIT"
+            echo "Setting version $VERSION"
+            mvn versions:set -DnewVersion="$VERSION"
+            mvn versions:commit
        - run: mvn package 
        - run:
            name: Save test results
@@ -25,16 +32,12 @@ jobs:
              mkdir -p ~/test-results/junit/
              find . -type f -regex ".*/target/surefire-reports/.*xml" -exec cp {} ~/test-results/junit/ \;
            when: always
-
        - store_test_results:
           path: ~/test-results
-
        - store_artifacts:
           path: ~/test-results/junit  
-
        - nais/docker-deploy:
           image: navikt/fpinfo-historikk	
-
           
 workflows:
    version: 2
