--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -26,6 +26,7 @@ jobs:
             mvn versions:set -DnewVersion="$VERSION"
             mvn versions:commit
        - run: 
+          name: "Push new version"
           command: |
               git commit -am "set version [skip ci]"
               git push origin master
