--- a/pom.xml
+++ b/pom.xml
@@ -27,6 +27,12 @@
         <tag>HEAD</tag>
     </scm>
     <build>
+        <resources>
+            <resource>
+                <filtering>true</filtering>
+                <directory>src/main/resources</directory>
+            </resource>
+        </resources>
         <plugins>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
