--- a/src/main/resources/application-dev.yaml
+++ b/src/main/resources/application-dev.yaml
@@ -4,39 +4,35 @@ management:
          exposure:
             include:  '*'
    endpoint:
-     health:
-        show-details: always
-        
-sts.enabled: false
-historikk.oppslag.enabled: false
-dokarkiv.enabled: false        
-kafka :
-   username: username
-   password: password
+      health:
+         show-details: always
+
+dokarkiv:
+   service: https://dokarkiv-q1.nais.preprod.local
+            
 spring:
-   jpa:
-      show-sql: false
-      properties:
-         hibernate:
-            format_sql=false
-      hibernate:
-         ddl-auto: create
-   flyway:
-      enabled: false
    http:
-      log-request-details: false
-   kafka: 
-      consumer:
+      log-request-details: true
+   datasource:
+      url: jdbc:postgresql://b27dbvl007.preprod.local:5432/fpinfo-historikk-preprod
+   kafka:   
+      properties:
+         security:
+            protocol: SASL_SSL
+         sasl: 
+            mechanism: PLAIN
+            jaas:
+               config: org.apache.kafka.common.security.plain.PlainLoginModule required username=${kafka.username} password=${kafka.password};
+      consumer: 
          enable-auto-commit: false
-         bootstrap-servers: localhost:9092
-         group-id: group_id
-         
+         bootstrap-servers: b27apvl00045.preprod.local:8443,b27apvl00046.preprod.local:8443,b27apvl00046.preprod.local:8443
+         group-id: group_id2 
          auto-offset-reset: earliest
          key-deserializer: org.apache.kafka.common.serialization.StringDeserializer
          value-deserializer: org.apache.kafka.common.serialization.StringDeserializer
        
       producer:
-         bootstrap-servers: localhost:9092
+         bootstrap-servers: b27apvl00045.preprod.local:8443,b27apvl00046.preprod.local:8443,b27apvl00046.preprod.local:8443
          key-serializer: org.apache.kafka.common.serialization.StringSerializer
          value-serializer: org.apache.kafka.common.serialization.StringSerializer
          transaction-id-prefix: tx.
