--- a/src/main/resources/bootstrap-dev.yaml
+++ b/src/main/resources/bootstrap-dev.yaml
@@ -1,4 +1,19 @@
 spring:
    cloud:
       vault:
-         enabled: false
+         enabled: true
+         uri: https://vault.adeo.no
+         database:
+              enabled: true
+              role: fpinfo-historikk-preprod-admin
+              backend: postgresql/preprod-fss
+         authentication: KUBERNETES
+         kubernetes:
+              role: fpinfo-historikk
+              kubernetes-path: kubernetes/preprod/fss
+              service-account-token-file: /var/run/secrets/kubernetes.io/serviceaccount/token        
+         generic:
+             enabled: true
+             backend: kv/preprod/fss
+             application-name: fpinfo-historikk/default
+             default-context: fpinfo-historikk/default 
