--- a/naiserator.yaml
+++ b/naiserator.yaml
@@ -38,4 +38,4 @@ spec:
    - name: no_nav_security_oidc_issuer_selvbetjening_discoveryurl
      value: https://login.microsoftonline.com/NAVtestB2C.onmicrosoft.com/v2.0/.well-known/openid-configuration?p=B2C_1A_idporten_ver1 
    - name: spring_profiles_active
-     value: dev42   
+     value: dev   
