--- a/src/main/resources/application-local.yaml
+++ b/src/main/resources/application-local.yaml
@@ -14,6 +14,9 @@ kafka :
    username: username
    password: password
 spring:
+   application:
+     admin:
+       enabled: true 
    jpa:
       show-sql: false
       properties:
