--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,64 +1,64 @@
 version: 2.1
 orbs:
-  nais: navikt/nais-deployment@1.4.0
+  nais: navikt/nais-deployment@1.4.1
+  slack: circleci/slack@3.3.0
   
 jobs:
    build:
-     working_directory: ~/fpinfo-historikk 
+     working_directory: ~/fpinfo-historikk
      docker:
        - image: circleci/openjdk:11-jdk
      steps:
-       - checkout
-       
+       - checkout       
+      
        - restore_cache: 
-           key: fpinfo-historikk-{{ checksum "pom.xml" }}
-          
-       - run: mvn dependency:go-offline
-       
+          name: Hente cache 
+          key: fpinfo-historikk-{{ checksum "pom.xml" }}
+      
+       - run:
+          name: Lagre avhengigheter  
+          command : mvn dependency:go-offline
+      
        - save_cache:
           paths:
             - ~/.m2
           key: fpinfo-historikk-{{ checksum "pom.xml" }}
           
+       - run: 
+           name: Bygge 
+           command: mvn clean package 
+      
        - run:
-          name: "Setting version"
-          command: |
-            TIME=$(TZ="Europe/Oslo" date +%Y.%m.%d-%H.%M)
-            COMMIT=$(git rev-parse --short=12 HEAD)
-            VERSION="1.$TIME-$COMMIT"
-            echo "Setting version $VERSION"
-            mvn versions:set -DnewVersion="$VERSION"
-            mvn versions:commit
-            
-       - run: mvn clean package 
-       
-       - run:
-           name: Save test results
+           name: Flytte testresultater
            command: |
              mkdir -p ~/test-results/junit/
              find . -type f -regex ".*/target/surefire-reports/.*xml" -exec cp {} ~/test-results/junit/ \;
            when: always
-           
+
        - store_test_results:
           path: ~/test-results
-          
+
        - store_artifacts:
           path: ~/test-results/junit  
           
        - nais/docker-deploy:
-          image: navikt/fpinfo-historikk	
+          image: navikt/$CIRCLE_PROJECT_REPONAME    
           
 workflows:
    version: 2
    deploy-nais-dev:
      jobs:
       - build:
-          context: NAIS deployment
+          context: NAIS deployment 
+                            
       - nais/deploy:
+          name: dev_deploy
+          enable-vars: true
+          template-vars: dev.json
           build-and-push-docker-image: false
           context: NAIS deployment
-          repo: navikt/fpinfo-historikk
-          image: navikt/fpinfo-historikk
+          repo: navikt/$CIRCLE_PROJECT_REPONAME
+          image: navikt/$CIRCLE_PROJECT_REPONAME
           github-app-id: 20250
           nais-template: naiserator.yaml
           environment: dev-fss
@@ -68,3 +68,36 @@ workflows:
               only: master
           requires:
             - build
+            
+      - hold:
+          type: approval
+          filters:
+            branches:
+              only: master
+          requires:
+            - dev_deploy 
+              
+      - slack/approval-notification:
+           webhook: https://hooks.slack.com/services/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
+           message: "Godkjenn deploy til prod av $CIRCLE_PROJECT_REPONAME"
+           url: https://circleci.com/workflow-run/$CIRCLE_WORKFLOW_WORKSPACE_ID
+           requires:
+            - dev_deploy 
+                   
+      - nais/deploy:
+          name: prod_deploy
+          enable-vars: true
+          template-vars: prod.json
+          build-and-push-docker-image: false
+          context: NAIS deployment
+          repo: navikt/$CIRCLE_PROJECT_REPONAME
+          image: navikt/$CIRCLE_PROJECT_REPONAME
+          github-app-id: 20250
+          nais-template: naiserator.yaml
+          environment: prod-fss
+          team: teamforeldrepenger
+          filters:
+            branches:
+              only: master
+          requires:
+            - hold      
