--- a/naiserator.yaml
+++ b/naiserator.yaml
@@ -25,6 +25,8 @@ spec:
       min: 2
       max: 2
       cpuThresholdPercentage: 50
+  ingresses:
+    - {{ingress}}    
   resources:
       limits:
         cpu: 1500m
@@ -35,7 +37,7 @@ spec:
   vault:
       enabled: true      
   env: 
-   - name: no_nav_security_oidc_issuer_selvbetjening_discoveryurl
-     value: https://login.microsoftonline.com/NAVtestB2C.onmicrosoft.com/v2.0/.well-known/openid-configuration?p=B2C_1A_idporten_ver1 
-   - name: spring_profiles_active
-     value: dev   
+  {{#each env}}
+   - name: {{@key}}
+     value: "{{this}}"
+  {{/each}}  
