--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -9,6 +9,11 @@ jobs:
      docker:
        - image: circleci/openjdk:11-jdk
      steps:
+     
+       - run: 
+           name: Checkout config 
+           command: git clone git@github.com:navikt/foreldrepenger-infra.git 
+           
        - checkout       
       
        - restore_cache: 
