--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -9,10 +9,10 @@ jobs:
      docker:
        - image: circleci/openjdk:11-jdk
      steps:
-     
+      
        - run: 
            name: Checkout config 
-           command: git clone git@github.com:navikt/foreldrepenger-infra.git 
+           command: git clone https://github.com/navikt/foreldrepenger-infra.git 
            
        - checkout       
       
