--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -9,10 +9,13 @@ jobs:
      docker:
        - image: circleci/openjdk:11-jdk
      steps:
-      
+       - add_ssh_keys:
+          fingerprints:
+            -  "SHA256:nThbg6kXUpJWGl7E1IGOCspRomTxdCARLviKw6E5SY8" 
+            
        - run: 
            name: Checkout config 
-           command: git clone https://github.com/navikt/foreldrepenger-infra.git 
+           command: git clone git@github.com:navikt/foreldrepenger-infra.git 
            
        - checkout       
       
