--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -9,7 +9,10 @@ jobs:
      docker:
        - image: circleci/openjdk:11-jdk
      steps:
-      
+       - add_ssh_keys:
+          fingerprints:
+            -  "33:5c:af:e4:4d:aa:45:bd:b3:b5:be:38:00:c2:89:7f" 
+            
        - run: 
            name: Checkout config 
            command: git clone git@github.com:navikt/foreldrepenger-infra.git 
