--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -30,6 +30,10 @@ jobs:
            command: mvn clean package 
       
        - run:
+           name: Sonar 
+           command : mvn sonar:sonar -Dsonar.projectKey=navikt_fpinfo-historikk  -Dsonar.organization=navit -Dsonar.host.url=https://sonarcloud.io -Dsonar.login=$SONAR       
+      
+       - run:
            name: Flytte testresultater
            command: |
              mkdir -p ~/test-results/junit/
