--- a/pom.xml
+++ b/pom.xml
@@ -15,6 +15,7 @@
     <version>0-SNAPSHOT</version>
 
     <properties>
+        <httpclient.version>4.5.8</httpclient.version>
         <oidc-spring-support.version>0.2.18</oidc-spring-support.version>
         <springfox.version>2.9.2</springfox.version>
         <timestamp>${maven.build.timestamp}</timestamp>
