--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,20 +1,34 @@
 version: 2.1
 orbs:
-  nais: navikt/nais-deployment@1.4.1
+  nais: navikt/nais-deployment@1.5.0
   slack: circleci/slack@3.3.0
+  env: christeredvartsen/persist-env@0.0.4
   
+executors:
+  openjdk:
+    working_directory: ~/fpinfo-historikk
+    docker:
+      - image: circleci/openjdk:11-jdk
+    environment:
+      MAJOR_VERSION: 2   
+  go:
+    docker:
+      - image: navikt/deployment-cli:v0.2.0  
 jobs:
    build:
-     working_directory: ~/fpinfo-historikk
-     docker:
-       - image: circleci/openjdk:11-jdk
+     executor: openjdk
      steps:
-           
        - checkout   
-       - run : 
-          name : Set environment variables
-          command : echo "export RELEASE_VERSION=\"$MAJOR_VERSION-$CIRCLE_BUILD_NUM-$(git rev-parse --short HEAD)\"" >> $BASH_ENV
-             
+       - env/set-env-var:
+          var-name: RELEASE_VERSION
+          var-value: $MAJOR_VERSION-$CIRCLE_BUILD_NUM-$(git rev-parse --short HEAD)
+       - env/set-env-var:
+          var-name: REPO
+          var-value: $CIRCLE_PROJECT_USERNAME/$CIRCLE_PROJECT_REPONAME
+       - env/set-env-var:
+          var-name: IMAGE
+          var-value: $CIRCLE_PROJECT_USERNAME/$CIRCLE_PROJECT_REPONAME/$CIRCLE_PROJECT_REPONAME
+       
       
        - restore_cache: 
           name: Hente cache 
@@ -54,62 +68,80 @@ jobs:
           path: ~/test-results/junit  
           
        - nais/docker-deploy:
-          image: navikt/$CIRCLE_PROJECT_REPONAME    
+          registry: docker.pkg.github.com
+          image: $IMAGE
+          tag: $RELEASE_VERSION
+
+       - env/persist-env 
+        
+   dev-deploy:
+     executor: go
+     steps:
+      - nais-deploy:
+          template-vars: dev.json
+          environment: dev-fss
+
+   prod-deploy:
+     executor: go
+     steps:
+      - nais-deploy:
+          template-vars: prod.json
+          environment: prod-fss
+
+commands:
+  nais-deploy:
+    parameters:
+      template-vars:
+        type: string
+      environment:
+        type: string
+    steps:
+      - env/attach-env
+      - checkout
+      - nais/generate-nais-deployment:
+          repo: $REPO
+          nais-template: naiserator.yaml
+          team: teamforeldrepenger
+          github-app-id: 20250
+          image: docker.pkg.github.com/$IMAGE
+          tag: $RELEASE_VERSION
+          environment: << parameters.environment >>
+          enable-vars: true
+          template-vars: << parameters.template-vars >>
           
 workflows:
    version: 2
-   deploy-nais-dev:
+   deploy-nais:
      jobs:
       - build:
-          context: NAIS deployment 
-                            
-      - nais/deploy:
-          name: dev_deploy
-          enable-vars: true
-          template-vars: dev.json
-          build-and-push-docker-image: false
+          context: familie-ci 
+      - dev-deploy:
           context: NAIS deployment
-          repo: navikt/$CIRCLE_PROJECT_REPONAME
-          image: navikt/$CIRCLE_PROJECT_REPONAME
-          github-app-id: 20250
-          nais-template: naiserator.yaml
-          environment: dev-fss
-          team: teamforeldrepenger
           filters:
             branches:
               only: master
           requires:
             - build
-            
+
       - hold:
           type: approval
           filters:
             branches:
               only: master
           requires:
-            - dev_deploy 
-              
+            - dev-deploy
+
       - slack/approval-notification:
-           webhook: $SLACK
-           message: "Godkjenn deploy til prod av $CIRCLE_PROJECT_REPONAME"
-           url: https://circleci.com/workflow-run/$CIRCLE_WORKFLOW_WORKSPACE_ID
-           requires:
-            - dev_deploy 
-                   
-      - nais/deploy:
-          name: prod_deploy
-          enable-vars: true
-          template-vars: prod.json
-          build-and-push-docker-image: false
+          webhook: $SLACK
+          message: "Godkjenn deploy til prod av $CIRCLE_PROJECT_REPONAME"
+          url: https://circleci.com/workflow-run/$CIRCLE_WORKFLOW_WORKSPACE_ID
+          requires:
+            - dev-deploy
+
+      - prod-deploy:
           context: NAIS deployment
-          repo: navikt/$CIRCLE_PROJECT_REPONAME
-          image: navikt/$CIRCLE_PROJECT_REPONAME
-          github-app-id: 20250
-          nais-template: naiserator.yaml
-          environment: prod-fss
-          team: teamforeldrepenger
           filters:
             branches:
               only: master
           requires:
-            - hold      
+            - hold
