--- a/src/main/resources/application-local.yml
+++ b/src/main/resources/application-local.yml
@@ -7,12 +7,16 @@ management:
      health:
         show-details: always
         
-sts.enabled: false
-historikk.oppslag.enabled: false
-dokarkiv.enabled: false        
-kafka :
-   username: username
-   password: password
+sts:
+  enabled: false
+
+historikk:
+  oppslag:
+    enabled: false
+
+dokarkiv:
+  enabled: false        
+
 spring:
    application:
      admin:
