ignore unknown fields

--- a/src/main/resources/application-local.yml
+++ b/src/main/resources/application-local.yml
@@ -17,7 +17,11 @@ historikk:
 dokarkiv:
   enabled: false        
 
-spring:
+kafka:
+   username: username
+   password: password
+   
+spring: 
    application:
      admin:
        enabled: true 
