--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -69,7 +69,7 @@ spring:
   
   flyway:
     baselineOnMigrate: false
-    enabled: false    
+    enabled: true    
 
   jackson:
     default-property-inclusion:  non-absent
