--- a/src/main/resources/bootstrap-dev.yaml
+++ b/src/main/resources/bootstrap-dev.yaml
@@ -2,8 +2,16 @@ spring:
    cloud:
       vault:
          database:
+              enabled: true
+              role: fpinfo-historikk-preprod-admin
               backend: postgresql/preprod-fss
+         authentication: KUBERNETES
          kubernetes:
+              role: fpinfo-historikk
               kubernetes-path: kubernetes/preprod/fss
+              service-account-token-file: /var/run/secrets/kubernetes.io/serviceaccount/token        
          generic:
+             enabled: true
              backend: kv/preprod/fss
+             application-name: fpinfo-historikk/default
+             default-context: fpinfo-historikk/default 
