--- a/src/main/resources/application-local.yml
+++ b/src/main/resources/application-local.yml
@@ -2,50 +2,42 @@ management:
    endpoints:
       web:
          exposure:
-            include:  '*'
+            include: '*'
    endpoint:
-     health:
-        show-details: always
-        
+      health:
+         show-details: always
 sts:
-  enabled: false
-
+   enabled: false
 historikk:
-  oppslag:
-    enabled: false
-
+   oppslag:
+      enabled: false
 dokarkiv:
-  enabled: false        
-
+   enabled: false
 kafka:
    username: username
    password: password
-   
-spring: 
+spring:
    application:
-     admin:
-       enabled: true 
+      admin:
+         enabled: true
    jpa:
       show-sql: false
       properties:
-         hibernate:
-            format_sql=false
+         hibernate: format_sql=false
       hibernate:
          ddl-auto: create
    flyway:
       enabled: false
    http:
       log-request-details: false
-   kafka: 
+   kafka:
       consumer:
          enable-auto-commit: false
          bootstrap-servers: localhost:9092
          group-id: group_id
-         
          auto-offset-reset: earliest
          key-deserializer: org.apache.kafka.common.serialization.StringDeserializer
          value-deserializer: org.apache.kafka.common.serialization.StringDeserializer
-       
       producer:
          bootstrap-servers: localhost:9092
          key-serializer: org.apache.kafka.common.serialization.StringSerializer
