--- a/src/main/resources/application-local.yml
+++ b/src/main/resources/application-local.yml
@@ -24,7 +24,7 @@ spring:
       properties:
          hibernate: format_sql=true
       hibernate:
-         ddl-auto: create
+         ddl-auto: update
    flyway:
       enabled: false
    http:
