disable inntektsmelding is now possible

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -9,6 +9,8 @@ dokarkiv:
 sts:
   enabled: true           
 historikk:
+   inntektsmelding:
+      enabled: false
    oppslag:
       enabled: true
    kafka:
