--- a/naiserator.yaml
+++ b/naiserator.yaml
@@ -13,7 +13,7 @@ spec:
       max: 2
       cpuThresholdPercentage: 50  
   liveness:
-      path: api/actuator/health
+      path: api/actuator/info
       initialDelay: 60
   readiness:
       path: api/actuator/info
