--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,9 +1,10 @@
 http:
    proxy: http://webproxy-nais.nav.no:8088
 no.nav:
-   security:
-      oidc:
-         issuers: selvbetjening
+   security:         
+      security.jwt.issuer.selvbetjening:
+         discoveryurl: https://login.microsoftonline.com/navnob2c.onmicrosoft.com/v2.0/.well-known/openid-configuration?p=B2C_1A_idporten
+         cookie_name: selvbetjening-idtoken
 dokarkiv:
   enabled: true
 sts:
