no need to be env aware

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -29,6 +29,9 @@ management:
       web:
          server:
             auto-time-requests: true
+   endpoint:
+      health:    
+         show-details : never            
    endpoints:
       web:
          exposure:
