--- a/src/main/resources/application-local.yml
+++ b/src/main/resources/application-local.yml
@@ -1,3 +1,5 @@
+import.enabled : true
+import.name : /Users/jan-olaveide/EclipseWS/fpinfo-historikk/src/test/resources/im
 management:
    endpoints:
       web:
