--- a/.github/workflows/prod-command.yml
+++ b/.github/workflows/prod-command.yml
@@ -28,7 +28,7 @@ jobs:
         uses: nais/deploy/actions/deploy@v1
         env:
           APIKEY: ${{ secrets.NAIS_DEPLOY_APIKEY }}
-          CLUSTER: prod
+          CLUSTER: prod-fss
           RESOURCE: naiserator.yaml
           PRINT_PAYLOAD: true
           VARS: prod.json 
