--- a/.github/workflows/prod-command.yml
+++ b/.github/workflows/prod-command.yml
@@ -31,7 +31,7 @@ jobs:
           CLUSTER: prod-fss
           RESOURCE: naiserator.yaml
           PRINT_PAYLOAD: true
-          VARS: prod.json 
+          VARS: prod-fss.json 
           
       - name: Oppdater kommentar med deployment status ved feil
         if: failure()
