--- a/.github/workflows/promote-command.yml
+++ b/.github/workflows/promote-command.yml
@@ -14,11 +14,14 @@ jobs:
        
       - name: Set variabler for image og cluster
         run: |
+           echo "::set-env name=TAG::$(echo ${{ github.event.client_payload.slash_command.arg1 }} | cut -c16-22)"  
            echo "::set-env name=IMAGE::$IMAGE_BASE:${{ github.event.client_payload.slash_command.arg1 }}" 
            echo "::set-env name=CLUSTER::${{ github.event.client_payload.slash_command.arg2 }}"         
        
       - name: Sjekk ut kode
         uses: actions/checkout@v1
+        with:
+          ref: ${{ env.TAG }}
     
       - name: Promoter til cluster
         uses: nais/deploy/actions/deploy@v1
