--- a/.github/workflows/promote-command.yml
+++ b/.github/workflows/promote-command.yml
@@ -38,7 +38,7 @@ jobs:
         with:
           token: ${{ secrets.NOTIFICATION }}
           repository: ${{ github.event.client_payload.github.payload.repository.full_name }}
-          comment-id: ${{ github.event.client_payload.github.payload.comment.id }}
+          issue-number: ${{ github.event.client_payload.github.payload.issue.number }}
           body: |
             >promote ${{ env.IMAGE }} til ${{ env.CLUSTER }} feilet
           reaction-type: -1          
@@ -49,7 +49,7 @@ jobs:
         with:
           token: ${{ secrets.NOTIFICATION }}
           repository: ${{ github.event.client_payload.github.payload.repository.full_name }}
-          comment-id: ${{ github.event.client_payload.github.payload.comment.id }}
+          issue-number: ${{ github.event.client_payload.github.payload.issue.number }}
           body: |
             >promote ${{ env.IMAGE }} til ${{ env.CLUSTER }} var OK
           reaction-type: rocket
