--- a/.github/workflows/promote-command.yml
+++ b/.github/workflows/promote-command.yml
@@ -51,6 +51,6 @@ jobs:
           repository: ${{ github.event.client_payload.github.payload.repository.full_name }}
           issue-number: ${{ github.event.client_payload.github.payload.issue.number }}
           body: |
-            >promote ${{ env.IMAGE }} til ${{ env.CLUSTER }} var OK
+            >promote ${{ env.TAG }} til ${{ env.CLUSTER }} var OK
           reaction-type: rocket
                   
