--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -48,7 +48,7 @@ jobs:
         with:
           token: ${{ secrets.NOTIFICATION }}
           title: Deploy av ${{ env.TAG }}
-          labels: ${{env.CLUSTER}}
+          labels: deployment,${{env.CLUSTER}}
           body: |
             Kommenter med <b>/promote ${{ env.TAG }} cluster</b>, hvor <b>cluster</b> er et gyldig clusternavn
             <table>
