--- a/.github/workflows/promote-command.yml
+++ b/.github/workflows/promote-command.yml
@@ -14,7 +14,6 @@ jobs:
        
       - name: Set variabler for image og cluster
         run: |
-           echo "::set-env name=FULLTAG::$(git log -1 --pretty='%ad' --date=format:'%Y%m%d%H%M%S')-$(echo $GITHUB_SHA | cut -c1-7)"  
            echo "::set-env name=TAG::$(echo ${{ github.event.client_payload.slash_command.arg1 }} | cut -c16-22)"  
            echo "::set-env name=IMAGE::$IMAGE_BASE:${{ github.event.client_payload.slash_command.arg1 }}" 
            echo "::set-env name=CLUSTER::${{ github.event.client_payload.slash_command.arg2 }}"         
@@ -26,6 +25,7 @@ jobs:
     
       - name: Promoter til cluster
         uses: nais/deploy/actions/deploy@v1
+
         env:
           APIKEY: ${{ secrets.NAIS_DEPLOY_APIKEY }}
           CLUSTER: ${{ env.CLUSTER }}
@@ -52,6 +52,6 @@ jobs:
           repository: ${{ github.event.client_payload.github.payload.repository.full_name }}
           issue-number: ${{ github.event.client_payload.github.payload.issue.number }}
           body: |
-            >promote ${{ env.FULLTAG }} til ${{ env.CLUSTER }} var OK
+            >promote ${{ github.event.client_payload.slash_command.arg1 }} til ${{ env.CLUSTER }} var OK
           reaction-type: rocket
                   
