--- a/.github/workflows/promote-command.yml
+++ b/.github/workflows/promote-command.yml
@@ -41,7 +41,7 @@ jobs:
           repository: ${{ github.event.client_payload.github.payload.repository.full_name }}
           issue-number: ${{ github.event.client_payload.github.payload.issue.number }}
           body: |
-            >promote ${{ env.IMAGE }} til ${{ env.CLUSTER }} feilet
+            >${{ github.event.client_payload.slash_command.args }} feilet
           reaction-type: -1          
  
       - name: Oppdater kommentar med deployment status
@@ -52,6 +52,6 @@ jobs:
           repository: ${{ github.event.client_payload.github.payload.repository.full_name }}
           issue-number: ${{ github.event.client_payload.github.payload.issue.number }}
           body: |
-            >promote ${{ github.event.client_payload.slash_command.arg1 }} til ${{ env.CLUSTER }} var OK
+            >${{ github.event.client_payload.slash_command.args }} var OK
           reaction-type: rocket
                   
