--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -46,22 +46,25 @@ jobs:
         uses: maxkomarychev/oction-create-issue@v0.7.1
         id: createdeployissue
         with:
-          token: ${{ secrets.NOTIFICATION }}
-          title: Deploy av ${{ env.TAG }}
-          labels: deployment,${{env.CLUSTER}}
+          token: ${{ secrets.GITHUB_TOKEN }}
+          title: Bygg av ${{ env.TAG }}
           body: |
             Kommenter med <b>/promote ${{ env.TAG }} cluster</b>, hvor <b>cluster</b> er et gyldig clusternavn
             <table>
             <tr><th>Cluster</th></tr>
             <tr><td>dev-fss</td></tr>
             <tr><td>prod-fss</td></tr>
-            </table>
-      
+            </table>       
+             
       - name: Trigg deploy til dev-fss
         if: success()
-        uses: peter-evans/create-or-update-comment@v1
+        uses: actions/github-script@0.3.0
         with:
-          token: ${{ secrets.NOTIFICATION }}
-          issue-number: ${{ steps.createdeployissue.outputs.number }}
-          body: /promote ${{ env.TAG }} ${{ env.CLUSTER }}
-     
+          github-token: ${{secrets.NOTIFICATION}}
+          script: |
+            const issue = { owner: context.issue.owner,
+                            repo: context.issue.repo,
+                            issue_number: ${{ steps.createdeployissue.outputs.number }} }
+            github.issues.createComment({...issue,
+                                    title: 'Deploy av ${{ env.TAG }}',
+                                    body: '/promote ${{ env.TAG }} ${{ env.CLUSTER }}'})
