--- a/.github/workflows/promote-command.yml
+++ b/.github/workflows/promote-command.yml
@@ -60,5 +60,5 @@ jobs:
                                     body: '>promote ${{ github.event.client_payload.slash_command.args }} var OK'})
             github.issues.addLabels({...issue, labels: ['deployment','${{ env.CLUSTER }}']})
             const id = new_comment.id;
-            github.reactions.createForIssueComment({owner: context.issue.owner,repo: context.issue.repo,comment_id : id,content: '+1'})
+            github.reactions.createForIssueComment({owner: context.issue.owner,repo: context.issue.repo, id,content: '+1'})
                   
