--- a/.github/workflows/promote-command.yml
+++ b/.github/workflows/promote-command.yml
@@ -59,6 +59,6 @@ jobs:
             const new_comment  = github.issues.createComment({...issue,
                                     body: '>promote ${{ github.event.client_payload.slash_command.args }} var OK'})
             github.issues.addLabels({...issue, labels: ['deployment','${{ env.CLUSTER }}']})
-            const id = new_comment.id;
+            const id = new_comment.number;
             github.reactions.createForIssueComment({owner: context.issue.owner,repo: context.issue.repo, id,content: '+1'})
                   
