--- a/pom.xml
+++ b/pom.xml
@@ -15,12 +15,12 @@
     <version>0-SNAPSHOT</version>
 
     <licenses>
-	  <license>
-	    <name>MIT License</name>
-	    <url>https://opensource.org/licenses/MIT</url>
-      </license>
+        <license>
+            <name>MIT License</name>
+            <url>https://opensource.org/licenses/MIT</url>
+        </license>
     </licenses>
-    
+
     <properties>
         <token-validation-version>1.1.4</token-validation-version>
         <springfox.version>2.9.2</springfox.version>
@@ -85,11 +85,6 @@
         </dependencies>
     </dependencyManagement>
     <dependencies>
-        <dependency>
-            <groupId>no.finn.unleash</groupId>
-            <artifactId>unleash-client-java</artifactId>
-            <version>3.3.0</version>
-        </dependency>
         <dependency>
             <groupId>org.apache.pdfbox</groupId>
             <artifactId>pdfbox</artifactId>
@@ -212,6 +207,11 @@
             <groupId>javax.inject</groupId>
             <artifactId>javax.inject</artifactId>
             <version>1</version>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.kafka</groupId>
+            <artifactId>spring-kafka-test</artifactId>
+            <scope>test</scope>
         </dependency>
     </dependencies>
 </project>
