--- a/src/main/resources/application-dev-fss.yml
+++ b/src/main/resources/application-dev-fss.yml
@@ -13,7 +13,10 @@ management:
    endpoint:
       health:
          show-details: always
-
+historikk:
+  kafka:
+      meldinger:
+         topic: privat-tilbakekreving-brukerdialog-q1
 spring:
    datasource:
       url: jdbc:postgresql://b27dbvl007.preprod.local:5432/fpinfo-historikk-preprod
