--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -18,7 +18,8 @@ historikk:
    kafka:
       meldinger:
          topic: privat-tilbakekreving-brukerdialog-p
-         oppgave: aapen-brukernotifikasjon-nyOppgave-v1-testing
+         oppgave.opprett: aapen-brukernotifikasjon-nyOppgave-v1-testing
+         oppgave.done: aapen-brukernotifikasjon-done-v1-testing
          søknad_topic: fpsoknad-mottak
          inntektsmelding_topic: privat-foreldrepenger-brukerdialog-inntektsmelding
 info:
