--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -17,6 +17,7 @@ historikk:
       enabled: true
    kafka:
       meldinger:
+         beskjed: aapen-brukernotifikasjon-nyBeskjed-v1-testing
          topic: privat-tilbakekreving-brukerdialog-p
          oppgave.opprett: aapen-brukernotifikasjon-nyOppgave-v1-testing
          oppgave.done: aapen-brukernotifikasjon-done-v1-testing
