set synlig fram til

--- a/src/main/resources/application-dev-fss.yml
+++ b/src/main/resources/application-dev-fss.yml
@@ -15,7 +15,7 @@ management:
          show-details: always
 historikk:
   kafka:
-      meldinger:
+      topics:
          topic: privat-tilbakekreving-brukerdialog-q1
 spring:
    datasource:
