--- a/pom.xml
+++ b/pom.xml
@@ -93,6 +93,11 @@
     </dependencyManagement>
     <dependencies>
         <dependency>
+            <groupId>no.nav.foreldrepenger.abakus</groupId>
+            <artifactId>abakus-kontrakt</artifactId>
+            <version>1.1-20200213081209-2b01231</version>
+        </dependency>
+        <dependency>
             <groupId>org.apache.avro</groupId>
             <artifactId>avro</artifactId>
             <version>1.9.1</version>
