--- a/pom.xml
+++ b/pom.xml
@@ -10,7 +10,7 @@
         <relativePath />
     </parent>
     <modelVersion>4.0.0</modelVersion>
-    <groupId>no.nav.bris</groupId>
+    <groupId>no.nav.foreldrepenger</groupId>
     <artifactId>fpinfo-historikk</artifactId>
     <version>0-SNAPSHOT</version>
 
@@ -95,7 +95,7 @@
         <dependency>
             <groupId>no.nav.foreldrepenger.abakus</groupId>
             <artifactId>abakus-kontrakt</artifactId>
-            <version>1.1-20200213081209-2b01231</version>
+            <version>1.1-20200214145925-6514287</version>
         </dependency>
         <dependency>
             <groupId>org.apache.avro</groupId>
