prøv å konsumere vedtak

--- a/src/main/resources/application-local.yml
+++ b/src/main/resources/application-local.yml
@@ -11,6 +11,8 @@ management:
 sts:
    enabled: false
 historikk:
+   vedtak:
+     enabled: true
    dittnav:
       enabled: false
    inntektsmelding:
