--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -11,6 +11,8 @@ dokarkiv:
 sts:
   enabled: true           
 historikk:
+   vedtak:
+     enabled: false
    dittnav:
       enabled: false
    inntektsmelding:
@@ -19,6 +21,7 @@ historikk:
       enabled: true
    kafka:
       topics:
+         vedtak: privat-familie-vedtakFattet-v1
          beskjed: aapen-brukernotifikasjon-nyBeskjed-v1
          tilbakekreving: privat-tilbakekreving-brukerdialog-p
          oppgave:
