enable vedtakskonsumpsjon i dev

--- a/src/main/resources/application-dev-fss.yml
+++ b/src/main/resources/application-dev-fss.yml
@@ -14,6 +14,8 @@ management:
       health:
          show-details: always
 historikk:
+  vedtak:
+     enabled: true
   dittnav:
       enabled: true
   kafka:
