--- a/pom.xml
+++ b/pom.xml
@@ -93,6 +93,11 @@
     </dependencyManagement>
     <dependencies>
         <dependency>
+            <groupId>org.junit.vintage</groupId>
+            <artifactId>junit-vintage-engine</artifactId>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
             <groupId>no.nav.foreldrepenger.abakus</groupId>
             <artifactId>abakus-kontrakt</artifactId>
             <version>1.1-20200224134804-69d48ae</version>
