--- a/src/main/resources/application-dev-fss.yml
+++ b/src/main/resources/application-dev-fss.yml
@@ -18,8 +18,11 @@ historikk:
      enabled: true
   dittnav:
       enabled: true
+  fordeling:
+      enabled: true    
   kafka:
       topics:
+         fordeling: privat-foreldrepenger-historikk-fordeling
          beskjed: aapen-brukernotifikasjon-nyBeskjed-v1-testing
          oppgave:
             opprett: aapen-brukernotifikasjon-nyOppgave-v1-testing
