add boot cluster conditionals

--- a/pom.xml
+++ b/pom.xml
@@ -255,5 +255,10 @@
             <artifactId>spring-kafka-test</artifactId>
             <scope>test</scope>
         </dependency>
+        <dependency>
+            <groupId>no.nav.foreldrepenger</groupId>
+            <artifactId>boot-conditionals</artifactId>
+            <version>1.0.20200227100107-9b6b707</version>
+        </dependency>
     </dependencies>
 </project>
