--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -23,6 +23,7 @@ historikk:
       enabled: true
    kafka:
       topics:
+         fordeling: privat-foreldrepenger-historikk-fordeling
          vedtak: privat-familie-vedtakFattet-v1
          beskjed: aapen-brukernotifikasjon-nyBeskjed-v1
          tilbakekreving: privat-tilbakekreving-brukerdialog-p
