--- a/.github/workflows/build-pr-or-branch.yml
+++ b/.github/workflows/build-pr-or-branch.yml
@@ -33,3 +33,6 @@ jobs:
       - name: Kompiler
         run: | 
           mvn install --batch-mode --quiet 
+        env:
+           GITHUB_USERNAME: x-access-token
+           GITHUB_PASSWORD: ${{ secrets.NOTIFICATION }}
