--- a/.github/workflows/build-pr-or-branch.yml
+++ b/.github/workflows/build-pr-or-branch.yml
@@ -32,7 +32,7 @@ jobs:
     
       - name: Kompiler
         run: | 
-          mvn install --batch-mode --quiet 
+          mvn clean install --batch-mode --quiet  --settings .github/workflows/.m2/settings.xml
         env:
            GITHUB_USERNAME: x-access-token
            GITHUB_PASSWORD: ${{ secrets.NOTIFICATION }}
