--- a/pom.xml
+++ b/pom.xml
@@ -36,6 +36,10 @@
     </scm>
     <repositories>
         <repository>
+           <id>github-package-registry-navikt</id>
+           <url>https://maven.pkg.github.com/navikt/maven-release</url>
+        </repository>
+        <repository>
             <id>confluent</id>
             <url>http://packages.confluent.io/maven/</url>
         </repository>
