--- a/src/main/resources/application-dev-fss.yml
+++ b/src/main/resources/application-dev-fss.yml
@@ -22,6 +22,7 @@ historikk:
       enabled: true    
   kafka:
       topics:
+         brev: privat-foreldrepenger-historikkinnslag-q1
          beskjed: aapen-brukernotifikasjon-nyBeskjed-v1-testing
          oppgave:
             opprett: aapen-brukernotifikasjon-nyOppgave-v1-testing
